<resources>
    <string name="app_name">Elogstation</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email/Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">Invalid Login</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="sign_in_to_continue">Sign in to Continue</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_choose_account">ChooseAccount</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_activity_driver_view">DriverView</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="truckNumber">Truck Number</string>
    <string name="driverName">Driver Name</string>
    <string name="currentStatus">Current Status</string>
    <string name="date">Date</string>
    <string name="offDuty">Off Duty</string>
    <string name="sleeper">Sleeper</string>
    <string name="driving">Driving</string>
    <string name="notDriving">Not Driving</string>
    <string name="certifyLogs">Certify Logs</string>
    <string name="wifiText">WIFI</string>
    <string name="bluetoothText">BLUETOOTH</string>
    <string name="title_activity_maps">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
