<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="elogstation.com.elogstation.DriverView"
    tools:showIn="@layout/app_bar_driver_view">
    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableLayout
            android:id="@+id/driver_details"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/appbar_padding_top"
            android:paddingTop="@dimen/activity_horizontal_margin"
            android:weightSum="2">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/truckNumber" />

                <TextView
                    android:id="@+id/truckNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="0" />
            </TableRow>

            <TableRow
                android:layout_width="197dp"
                android:layout_height="match_parent"
                android:weightSum="1">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/driverName" />
                <TextView
                    android:id="@+id/driverName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="name" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/currentStatus" />

                <TextView
                    android:id="@+id/currentStatus"
                    android:layout_width="19dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/date" />

                <EditText
                    android:id="@+id/editDateText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_span="3"
                    android:ems="10"
                    android:inputType="date"
                    android:text="28/11/2017" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="@dimen/activity_horizontal_margin"
                android:weightSum="1">


                <Button
                    android:id="@+id/offdutybutton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_span="1"
                    android:text="@string/offDuty" />

                <Button
                    android:id="@+id/sleeperbutton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_span="1"
                    android:text="@string/sleeper" />

                <Button
                    android:id="@+id/drivingbutton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_span="1"
                    android:text="@string/driving" />

                <Button
                    android:id="@+id/notdrivingbutton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_span="1"
                    android:text="@string/notDriving" />
            </TableRow>


            <com.jjoe64.graphview.GraphView
                android:layout_width="100dip"
                android:layout_height="200dip"
                android:id="@+id/graph" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="1">

                <TextView
                    android:id="@+id/graphTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_span="4"
                    android:gravity="center"
                    android:text="" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="1">

                <Button
                    android:id="@+id/certifybutton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_span="1"
                    android:gravity="center"
                    android:text="@string/certifyLogs"/>
            </TableRow>
        </TableLayout>
    </FrameLayout>
</android.support.constraint.ConstraintLayout>
